karnc/tests/fixtures/negative/149_adapter_consumes_unknown_selected/src/tokens.karn
adapter tokens {
  consumes logging { Nope }
}
